--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title></title>
+	<title>My practice site</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
