--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript" src="scripts/scripts.js"></script>
 
 <h1>Heading 1!</h1>
@@ -26,10 +27,13 @@
 	<p>A div is a gorup of things I created</p>
 </div>
 
-<div class = "mydiv fixed">
+<div class = "mydiv fixed blue" id ="clickedthisone" >
 	<h1>This is a relative div</h1>
 	<p>A div is a gorup of things I created</p>
 </div>
+<div id ="redbutton" class = "red button1"></div>
+<div id ="bluebutton" class = "blue button2"></div>
+
 
 </body>
 </html>
