--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Tiff's Gallery</title>
+	<title>My Processing Gallery</title>
 </head>
 
 <link rel="stylesheet" type="text/css" href="styles/styles.css">
@@ -10,7 +10,7 @@
 	<div class="wrapper">
 
 	<h1>MY GALLERY</h1>
-	<p>Here are some of my sketches.</p>
+	<p>Here are some of my sketches. Move your mouse over the screen to interact.</p>
 
 <!-- 	Placing pde sketches-->	
 	<canvas data-processing-sources="sketches/sketch1/sketch1.pde" id ="firstsketch"></canvas>
