--- a/gallery/index.html
+++ b/gallery/index.html
@@ -9,7 +9,7 @@
 
 	<div class="wrapper">
 
-	<h1>MY GALLERY</h1>
+	<h1>MY 1GALLERY</h1>
 	<p>Here are some of my sketches. Move your mouse over the screen to interact.</p>
 
 <!-- 	Placing pde sketches-->	
