--- a/gallery/index.html
+++ b/gallery/index.html
@@ -9,13 +9,13 @@
 
 	<div class="wrapper">
 
-	<h1>MY 1GALLERY</h1>
+	<h1>MY GALLERY</h1>
 	<p>Here are some of my sketches. Move your mouse over the screen to interact.</p>
 
 <!-- 	Placing pde sketches-->	
 	<canvas data-processing-sources="sketches/sketch1/sketch1.pde" id ="firstsketch"></canvas>
 
-	<canvas data-processing-sources="sketches/sketch2/sketch2.pde" class="hidden" id = "secondsketch"></canvas>
+	<canvas data-processing-sources="sketches/sketch2/sketch2.pde sketches/sketch2/HYPE.pde" class="hidden" id = "secondsketch"></canvas>
 
 	<canvas data-processing-sources="sketches/sketch3/sketch3.pde sketches/sketch3/ball.pde" class = "hidden" id ="thirdsketch"></canvas>
 
