--- a/gallery/index.html
+++ b/gallery/index.html
@@ -17,7 +17,7 @@
 
 	<canvas data-processing-sources="sketches/sketch2/sketch2.pde sketches/sketch2/HYPE.pde" class="hidden" id = "secondsketch"></canvas>
 
-	<canvas data-processing-sources="sketches/sketch3/sketch3.pde sketches/sketch3/ball.pde" class = "hidden" id ="thirdsketch"></canvas>
+	<canvas data-processing-sources="sketches/sketch3/sketch3.pde" class = "hidden" id ="thirdsketch"></canvas>
 
 	<canvas data-processing-sources="sketches/sketch4/sketch4.pde sketches/sketch4/HYPE.pde" class = "hidden" id ="fourthsketch"></canvas>
 
