--- a/gonnagetcha/index.html
+++ b/gonnagetcha/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>bubbles-collide4</title>
+    <title>gonna getcha</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
